src/objects/jj_rb_Rebate_Contract__c.object
<CustomObject>
    <description>This object stores the contract information created for a customer.</description>
    <fields>
        <fullName>jj_rb_Closure_Comment__c</fullName>
        <label>Closure Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_Closure_Status__c</fullName>
        <label>Closure Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement value is too low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <summarizedField>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_End_Date__c</summarizedField>
        <summaryForeignKey>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_Rebate_Contract__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <summarizedField>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_Start_Date__c</summarizedField>
        <summaryForeignKey>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_Rebate_Contract__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Contracts</relationshipLabel>
        <relationshipName>Rebate_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_National_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Rebate Contracts</relationshipLabel>
        <relationshipName>Rebate_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Modified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Expired_Line_Items__c</fullName>
        <description>Total count of all the expired line items in the contract.</description>
        <label>Total Expired Line Items</label>
        <summaryFilterItems>
            <field>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </summaryFilterItems>
        <summaryForeignKey>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_Rebate_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Line_Items__c</fullName>
        <label>Total Line Items</label>
        <summaryForeignKey>jj_rb_Rebate_Contract_Line_Item__c.jj_rb_Rebate_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Rebate Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Contract_Start_Date__c</columns>
        <columns>jj_rb_Contract_End_Date__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jj_rb_Homecare_Closed_Contracts</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Product__c</columns>
        <columns>jj_rb_National_Channel_Manager__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Rebate_Contract__c.jj_rb_HCP_Close_Contract</value>
        </filters>
        <label>*Homecare Closed Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>jj_rb_Homecare_Contracts</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Product__c</columns>
        <columns>jj_rb_National_Channel_Manager__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Rebate_Contract__c.jj_rb_Homecare_Contract</value>
        </filters>
        <label>*Homecare Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>jj_rb_Retailer_Closed_Contracts</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_National_Channel_Manager__c</columns>
        <columns>jj_rb_Closure_Comment__c</columns>
        <columns>jj_rb_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Rebate_Contract__c.jj_rb_Retailer_Close_Contract</value>
        </filters>
        <label>*Retailer Closed Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>jj_rb_Retailer_Contracts</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_National_Channel_Manager__c</columns>
        <columns>jj_rb_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Rebate_Contract__c.jj_rb_Retailer_Rebate_Contract</value>
        </filters>
        <label>*Retailer Contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RC-{0}</displayFormat>
        <label>Rebate Contract No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Contracts</pluralLabel>
    <recordTypes>
        <fullName>jj_rb_HCP_Close_Contract</fullName>
        <active>true</active>
        <description>Recordtype for Homecare closed contract.</description>
        <label>Homecare Closed Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Homecare_Contract</fullName>
        <active>true</active>
        <description>Use this to create a new Homecare contract</description>
        <label>Homecare Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Close_Contract</fullName>
        <active>true</active>
        <description>Recordtype for closed retailer contracts.</description>
        <label>Retailer Closed Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Rebate_Contract</fullName>
        <active>true</active>
        <description>Use this to create a new Retailer contract</description>
        <label>Retailer Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>